github link click issue fixed using the z-index

--- a/style.css
+++ b/style.css
@@ -228,11 +228,10 @@ a{
 .face1{
     width: 50%;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
     transform: translateX(50%);
     transition: all 0.6s;
-    z-index: 1;
+    z-index: 2;
+    height: auto;
 }
 .face2{
     display: flex;
@@ -243,7 +242,7 @@ a{
     transform: translateX(-50%);
     transition: all 0.8s;
     opacity: 0;
-    z-index: -1;
+    z-index: 1;
     border-radius: 0px 20px 20px 0px;
     background-color: var(--card-background-color);
     color: whitesmoke;
@@ -267,6 +266,7 @@ a{
     
     display: flex;
     justify-content: center;
+    z-index: 3;
     
 }
 .card .project-name::before{
